Fix static file locations

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 					    	<div class="text pl-3">
 		    					<span class="date">June-July 2020</span>
 		    					<h2>Virtual Internship</h2>
-		    					<span class="position">JP Morgan Chase & Co.</span>
+		    					<span class="position">Microsoft Engineering Undergraduate Virtual Internship</span>
 		    					<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
 		    				</div>
 	    				</div>
@@ -882,7 +882,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
-            	<div class="block-23 mb-3">
+            	<div class="block-23 mb-3" style="width:max-content">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">Paschim Puri, West Delhi ,Delhi - 110063, India</span></li>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 7011806234</span></a></li>
