--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "Web Designer.", "App Developer.", "Electronic Music Enthusiast.", "Blogger.","B.Tech Student" ]'></span>
+								     data-rotate='[ "JAVA Developer.", "SQL/MySQL Data Analyst.", "Electronic Music Enthusiast.", "Blogger @Medium.","B.Tech Student" ]'></span>
 								</h2>
 							</div>
             </div>
