--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>Experienced Java Developer with a demonstrated history of working in the research field. Skilled in C (Programming Language), Database Development and Maintainance by MySQL, C++ programming, Technical Documentation, and Electronic Music Production. Strong Software Development professional with a  great Problem Solving ability and pursuing a Bachelor of Technology - B.Tech. focused in Information Technology from Bharati Vidyapeeth's College Of Engineering , New Delhi. </p>
+		            <p>Experienced Java Developer with a demonstrated history of working in the research field. Database Development and Maintainance by MySQL, Technical Content Creator, and Electronic Music Producer. Strong Software Development professional with a  great Problem Solving ability and pursuing Bachelors of Technology - B.Tech. focused in Information Technology from Bharati Vidyapeeth's College Of Engineering , New Delhi. </p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Anubhav Mishra</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>June 22, 1999</span></li>
@@ -101,7 +101,7 @@
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
               	<p class="mb-4">
-	                <span class="number" data-number="20">0</span>
+	                <span class="number" data-number="10">0</span>
 	                <span>+ Projects complete</span>
                 </p>
                 <p><!--a href="#" class="btn btn-primary py-3 px-3">Download CV</a></p>-->
@@ -190,8 +190,8 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">April 2020</span>
-		    					<h2>Machine Learning &amp; Data Analytics With Python</h2>
-		    					<span class="position">Indian Institute Of Technology Roorkee, India</span>
+		    					<h2>Introduction to SQL</h2>
+		    					<span class="position">University of Michigan, platform Coursera</span>
 		    					<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
 		    				</div>
 	    				</div>
@@ -227,8 +227,8 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">June-July 2020</span>
-		    					<h2>Virtual Internship</h2>
-		    					<span class="position">Microsoft Engineering Undergraduate Virtual Internship</span>
+		    					<h2>Mentor</h2>
+		    					<span class="position">Hustler Community on Skillenza</span>
 		    					<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
 		    				</div>
 	    				</div>
@@ -274,7 +274,7 @@
 						        <h2 class="h5 font-weight-bold text-center mb-4">C </h2>
 
 						        <!-- Progress bar 1 -->
-						        <div class="progress mx-auto" data-value='90'>
+						        <div class="progress mx-auto" data-value='75'>
 						          <span class="progress-left">
                         <span class="progress-bar border-primary"></span>
 						          </span>
@@ -293,7 +293,7 @@
 						            <div class="h4 font-weight-bold mb-0">58%</div><span class="small text-gray">Last Year</span>
 						          </div>
 						          <div class="col-6">
-						            <div class="h4 font-weight-bold mb-0">850%</div><span class="small text-gray">Last month</span>
+						            <div class="h4 font-weight-bold mb-0">85%</div><span class="small text-gray">Last month</span>
 						          </div>
 						        </div>
 						        <!-- END -->
@@ -344,7 +344,7 @@
                         <span class="progress-bar border-primary"></span>
 						          </span>
 						          <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-						            <div class="h2 font-weight-bold">92<sup class="small">%</sup></div>
+						            <div class="h2 font-weight-bold">90<sup class="small">%</sup></div>
 						          </div>
 						        </div>
 						        <!-- END -->
@@ -369,7 +369,7 @@
 										<div class="progress">
 										 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-										    <span>90%</span>
+										    <span>50%</span>
 										  	</div>
 										</div>
 									</div>
@@ -598,7 +598,7 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/billing.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Registration & Billing System</a></h3>
+	    					<h3><a href="#">Hospital Management System</a></h3>
 	    					<span>Java JDBC MySQL</span>
 	    				</div>
     				</div>
@@ -746,7 +746,7 @@
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
 						<h2>I'm <span>Looking </span> for Internships</h2>
-						<p>I am looking for internships in the field of App Development or Machine Learning</p>
+						<p>I am looking for Jobs in the field of Software Development and I am open to learn any new technology</p>
 						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
 					</div>
 				</div>
@@ -804,7 +804,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Website</h3>
-		            <p><a href="#">www.anubhavmishra.xyz</a></p>
+		            <p><a href="#">www.anubhavmishra.netlify.app</a></p>
 	            </div>
 	          </div>
           </div>
@@ -846,7 +846,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
-              <p>I am a Computer Science Engineering student with a keen interest in the fields of App Development Using Java & Machine Learning related technologies</p>
+              <p>I am an Information Technology Engineering student with a keen interest in Java Developmnt and App Development and I am open to learn any new technology</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="https://twitter.com/Anubhav_Mishra_"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.linkedin.com/in/anubhav-mishra-172726181/"><span class="icon-linkedin"></span></a></li>
@@ -873,7 +873,7 @@
               <ul class="list-unstyled">
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Core Java Programming</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Development</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Machine Learnign</a></li>
+                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Data Structures</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Data Analysis</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>App Development</a></li>
               </ul>
