--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Website</h3>
-		            <p><a href="#">www.anubhavmishra.netlify.app</a></p>
+		            <p><a href="www.anubhavmishra.netlify.app">www.anubhavmishra.com</a></p>
 	            </div>
 	          </div>
           </div>
@@ -871,7 +871,7 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Skills</h2>
               <ul class="list-unstyled">
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Core Java Programming</a></li>
+                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Java Programming</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Development</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Data Structures</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Data Analysis</a></li>
