--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	        <ul class="navbar-nav nav ml-auto">
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
-	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Education</span></a></li>
+	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Experience</span></a></li>
 	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Soft Skills</span></a></li>
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
 	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
@@ -58,7 +58,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "JAVA Developer.", "SQL/MySQL Data Analyst.", "Electronic Music Enthusiast.", "Blogger @Medium.","B.Tech Student" ]'></span>
+								     data-rotate='[ "Working professional at EPAM Systems", "Javascript Developer.", "Electronic Music Enthusiast.", "JAVA Developer.","B.Tech Graduate in IT" ]'></span>
 								</h2>
 							</div>
             </div>
@@ -87,7 +87,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>Experienced Java Developer with a demonstrated history of working in the research field. Database Development and Maintainance by MySQL, Technical Content Creator, and Electronic Music Producer. Strong Software Development professional with a  great Problem Solving ability and pursuing Bachelors of Technology - B.Tech. focused in Information Technology from Bharati Vidyapeeth's College Of Engineering , New Delhi. </p>
+		            <p>Experienced and agile Software Engineer with a demonstrated history of working in the tech industry for than 15 months and a significant research experience also. Javascript, NodeJS, ExpressJS, Java, SQL/MySQL, HTML/CSS. Strong Software Development professional with a  great Problem Solving ability and a degree of Bachelors of Technology - B.Tech. focused in Information Technology from Bharati Vidyapeeth's College Of Engineering , New Delhi. </p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Anubhav Mishra</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>June 22, 1999</span></li>
@@ -112,7 +112,7 @@
     	</div>
     </section>
 
-    <section class="ftco-section ftco-partner">
+<!--     <section class="ftco-section ftco-partner">
     	<div class="container">
     		<div class="row">
     			<div class="col-sm ftco-animate">
@@ -132,7 +132,7 @@
     			</div>
     		</div>
     	</div>
-    </section>
+    </section> -->
 
     <section class="ftco-section ftco-no-pb goto-here" id="resume-section">
     	<div class="container">
@@ -199,6 +199,18 @@
 
 					  <div id="page-2" class= "page two">
 					  	<h2 class="heading">Experience</h2>
+					
+	    				<div class="resume-wrap d-flex ftco-animate">
+	    					<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">August 2021-Till Now</span>
+		    					<h2>Junior Software Engineer</h2>
+		    					<span class="position">EPAM Systems</span>
+		    					<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
+		    				</div>
+	    				</div>
 					    <div class="resume-wrap d-flex ftco-animate">
 					    	<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
@@ -271,38 +283,7 @@
 					  	<div class="row progress-circle mb-5">
 					  		<div class="col-lg-4 mb-4">
 						      <div class="bg-white rounded-lg shadow p-4">
-						        <h2 class="h5 font-weight-bold text-center mb-4">C </h2>
-
-						        <!-- Progress bar 1 -->
-						        <div class="progress mx-auto" data-value='75'>
-						          <span class="progress-left">
-                        <span class="progress-bar border-primary"></span>
-						          </span>
-						          <span class="progress-right">
-                        <span class="progress-bar border-primary"></span>
-						          </span>
-						          <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-						            <div class="h2 font-weight-bold">75<sup class="small">%</sup></div>
-						          </div>
-						        </div>
-						        <!-- END -->
-
-						        <!-- Demo info -->
-						        <div class="row text-center mt-4">
-						          <div class="col-6 border-right">
-						            <div class="h4 font-weight-bold mb-0">58%</div><span class="small text-gray">Last Year</span>
-						          </div>
-						          <div class="col-6">
-						            <div class="h4 font-weight-bold mb-0">75%</div><span class="small text-gray">Last month</span>
-						          </div>
-						        </div>
-						        <!-- END -->
-						      </div>
-						    </div>
-
-						    <div class="col-lg-4 mb-4">
-						      <div class="bg-white rounded-lg shadow p-4">
-						        <h2 class="h5 font-weight-bold text-center mb-4">HTML</h2>
+						        <h2 class="h5 font-weight-bold text-center mb-4">Javascript </h2>
 
 						        <!-- Progress bar 1 -->
 						        <div class="progress mx-auto" data-value='80'>
@@ -321,10 +302,41 @@
 						        <!-- Demo info -->
 						        <div class="row text-center mt-4">
 						          <div class="col-6 border-right">
-						            <div class="h4 font-weight-bold mb-0">64%</div><span class="small text-gray">Last Year</span>
+						            <div class="h4 font-weight-bold mb-0">70%</div><span class="small text-gray">Last Year</span>
 						          </div>
 						          <div class="col-6">
-						            <div class="h4 font-weight-bold mb-0">79%</div><span class="small text-gray">Last month</span>
+						            <div class="h4 font-weight-bold mb-0">90%</div><span class="small text-gray">Last month</span>
+						          </div>
+						        </div>
+						        <!-- END -->
+						      </div>
+						    </div>
+
+						    <div class="col-lg-4 mb-4">
+						      <div class="bg-white rounded-lg shadow p-4">
+						        <h2 class="h5 font-weight-bold text-center mb-4">NodeJS</h2>
+
+						        <!-- Progress bar 1 -->
+						        <div class="progress mx-auto" data-value='80'>
+						          <span class="progress-left">
+                        <span class="progress-bar border-primary"></span>
+						          </span>
+						          <span class="progress-right">
+                        <span class="progress-bar border-primary"></span>
+						          </span>
+						          <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
+						            <div class="h2 font-weight-bold">75<sup class="small">%</sup></div>
+						          </div>
+						        </div>
+						        <!-- END -->
+
+						        <!-- Demo info -->
+						        <div class="row text-center mt-4">
+						          <div class="col-6 border-right">
+						            <div class="h4 font-weight-bold mb-0">70%</div><span class="small text-gray">Last Year</span>
+						          </div>
+						          <div class="col-6">
+						            <div class="h4 font-weight-bold mb-0">80%</div><span class="small text-gray">Last month</span>
 						          </div>
 						        </div>
 						        <!-- END -->
@@ -336,7 +348,7 @@
 						        <h2 class="h5 font-weight-bold text-center mb-4">Java</h2>
 
 						        <!-- Progress bar 1 -->
-						        <div class="progress mx-auto" data-value='75'>
+						        <div class="progress mx-auto" data-value='90'>
 						          <span class="progress-left">
                         <span class="progress-bar border-primary"></span>
 						          </span>
@@ -352,10 +364,10 @@
 						        <!-- Demo info -->
 						        <div class="row text-center mt-4">
 						          <div class="col-6 border-right">
-						            <div class="h4 font-weight-bold mb-0">48%</div><span class="small text-gray">Last Year</span>
+						            <div class="h4 font-weight-bold mb-0">85%</div><span class="small text-gray">Last Year</span>
 						          </div>
 						          <div class="col-6">
-						            <div class="h4 font-weight-bold mb-0">87%</div><span class="small text-gray">Last month</span>
+						            <div class="h4 font-weight-bold mb-0">95%</div><span class="small text-gray">Last month</span>
 						          </div>
 						        </div>
 						        <!-- END -->
@@ -365,11 +377,11 @@
 					  	<div class="row">
 					  		<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
-										<h3>Photoshop</h3>
+										<h3>C</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
-										  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-										    <span>50%</span>
+										  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
+										    <span>75%</span>
 										  	</div>
 										</div>
 									</div>
@@ -412,8 +424,8 @@
 										<h3>DAW Production</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
-										  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-										    <span>70%</span>
+										  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
+										    <span>60%</span>
 										  	</div>
 										</div>
 									</div>
@@ -460,10 +472,10 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2020</span>
-		    					<h2>Got Affiliated With 3 Publications</h2>
-		    					<span class="position">Medium.com</span>
-		    					<p>Analytics Vidhya, Noteworthy, DevGenius</p>
+		    					<span class="date">2022</span>
+		    					<h2>EPAM EMGX Bootcamp Top Graduate</h2>
+		    					<span class="position">EPAM Sytems</span>
+		    					<p>Completed the Clean Code and Clean Design bootcamp with over 90% accuracy</p>
 		    				</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -745,9 +757,9 @@
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
-						<h2>I'm <span>Looking </span> for Internships</h2>
-						<p>I am looking for Jobs in the field of Software Development and I am open to learn any new technology</p>
-						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
+						<h2>Upcoming <span> Graduate Student </span> in the field of Computer Science</h2>
+						<p>To continue my primary passion in the world of Computer Science I am going to pursue my Masters degree starting from the term Fall 2023 at your prestigious college</p>
+						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Choose Me</a></p>
 					</div>
 				</div>
 			</div>
@@ -804,7 +816,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Website</h3>
-		            <p><a href="www.anubhavmishra.netlify.app">www.anubhavmishra.com</a></p>
+		            <p><a href="www.anubhavmishra.netlify.app">Redirect Me To Website</a></p>
 	            </div>
 	          </div>
           </div>
@@ -846,12 +858,12 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
-              <p>I am an Information Technology Engineering student with a keen interest in Java Developmnt and App Development and I am open to learn any new technology</p>
+              <p>I am a Working Professional with more than 15 months of experience, with a Bachelors of Technology degree with 84%, make the right choice by choosing me for your program</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="https://twitter.com/Anubhav_Mishra_"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.linkedin.com/in/anubhav-mishra-172726181/"><span class="icon-linkedin"></span></a></li>
 				<li class="ftco-animate"><a href="https://www.instagram.com/anubhav_22699/"><span class="icon-instagram"></span></a></li>
-				<li class="ftco-animate"><a href="https://github.com/AnubhavMishra22"><span class="icon-github"></span></a></li>
+				<li class="ftco-animate"><a href="https://github.com/"><span class="icon-github"></span></a></li>
               </ul>
             </div>
           </div>
