--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>Experienced and agile Software Engineer with a demonstrated history of working in the tech industry for than 15 months and a significant research experience also. Javascript, NodeJS, ExpressJS, Java, SQL/MySQL, HTML/CSS. Strong Software Development professional with a  great Problem Solving ability and a degree of Bachelors of Technology - B.Tech. focused in Information Technology from Bharati Vidyapeeth's College Of Engineering , New Delhi. </p>
+		            <p>Experienced and agile Software Engineer with a demonstrated history of working in the tech industry for more than 15 months and significant research experience also. Javascript, NodeJS, ExpressJS, Java, SQL/MySQL, HTML/CSS. Strong Software Development professional with a  great Problem Solving ability and a degree of Bachelors of Technology - B.Tech. focused in Information Technology from Bharati Vidyapeeth's College Of Engineering , New Delhi. </p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Anubhav Mishra</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>June 22, 1999</span></li>
