--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>Experienced and agile Software Engineer with a demonstrated history of working in the tech industry for more than 15 months and significant research experience also. Javascript, NodeJS, ExpressJS, Java, SQL/MySQL, HTML/CSS. Strong Software Development professional with a  great Problem Solving ability and a degree of Bachelors of Technology - B.Tech. focused in Information Technology from Bharati Vidyapeeth's College Of Engineering , New Delhi. </p>
+		            <p>Experienced and agile Software Engineer with a demonstrated history of working in the tech industry for more than 18 months and significant research experience also. Javascript, NodeJS, ExpressJS, Java, SQL/MySQL, HTML/CSS. Strong Software Development professional with a  great Problem Solving ability and a degree of Bachelors of Technology - B.Tech. focused in Information Technology from Bharati Vidyapeeth's College Of Engineering , New Delhi. </p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Anubhav Mishra</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>June 22, 1999</span></li>
@@ -484,7 +484,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2015</span>
-		    					<h2>5 Years Continous Full Attendence In School</h2>
+		    					<h2>4 Years Continous Full Attendence In School</h2>
 		    					<span class="position">Hans Raj Model School</span>
 		    					<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
 		    				</div>
@@ -619,7 +619,7 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/bitcoin.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Bitcoin Explorer Progressive Web Application</a></h3>
+	    					<h3><a href="#">Blockchain Explorer Progressive Web Application</a></h3>
 	    					<span>Blockchain Technology</span>
 	    				</div>
     				</div>
@@ -816,7 +816,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Website</h3>
-		            <p><a href="www.anubhavmishra.netlify.app">Redirect Me To Website</a></p>
+		            <p><a href="https://www.linkedin.com/in/anubhav-mishra-172726181/">Redirect to my Linkedin</a></p>
 	            </div>
 	          </div>
           </div>
