updated website for latest job/internship search

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "Working professional at EPAM Systems", "Javascript Developer.", "Electronic Music Enthusiast.", "JAVA Developer.","B.Tech Graduate in IT" ]'></span>
+								     data-rotate='[ "MSCS student at University of California Davis", "Ex-Software Engineer at EPAM Systems", "Web Developer", "MSCS student at University of California Davis", "Electronic Music Enthusiast.", "JAVA Developer.","B.Tech Graduate in IT" ]'></span>
 								</h2>
 							</div>
             </div>
@@ -87,14 +87,13 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>Experienced and agile Software Engineer with a demonstrated history of working in the tech industry for more than 18 months and significant research experience also. Javascript, NodeJS, ExpressJS, Java, SQL/MySQL, HTML/CSS. Strong Software Development professional with a  great Problem Solving ability and a degree of Bachelors of Technology - B.Tech. focused in Information Technology from Bharati Vidyapeeth's College Of Engineering , New Delhi. </p>
+		            <p>Experienced and agile Software Engineer with a demonstrated history of working in the tech industry for more than 2 Years, and significant research experience also. Javascript, NodeJS, ExpressJS, Java, SQL/MySQL, HTML/CSS. Strong Software Development professional with a  great Problem Solving ability, pursuing Masters in Computer Science from University of California Davis and a degree of Bachelors of Technology focused in Information Technology. </p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Anubhav Mishra</span></li>
-		            	<li class="d-flex"><span>Date of birth:</span> <span>June 22, 1999</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>Paschim Puri , West Delhi, Delhi, India</span></li>
-		            	<li class="d-flex"><span>Zip code:</span> <span>110063</span></li>
-		            	<li class="d-flex"><span>Email:</span> <span>anubhavmishram@gmail.com</span></li>
-		            	<li class="d-flex"><span>Phone: </span> <span>+91 7011806234</span></li>
+		            	<li class="d-flex"><span>Address:</span> <span>Davis, California, USA</span></li>
+		            	<li class="d-flex"><span>Zip code:</span> <span>95616</span></li>
+		            	<li class="d-flex"><span>Email:</span> <span>imishra@ucdavis.edu</span></li>
+		            	<li class="d-flex"><span>Phone: </span> <span>+1 5307606450</span></li>
 		            </ul>
 		          </div>
 		        </div>
@@ -150,6 +149,17 @@
 					<div class="col-md-9">
 					  <div id="page-1" class= "page one">
 					  	<h2 class="heading">Educational Qualifications</h2>
+						  <div class="resume-wrap d-flex ftco-animate">
+					    	<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+							<div class="text pl-3">
+								<span class="date">2023-2025</span>
+								<h2>Masters of Sciences in Computer Science</h2>
+								<span class="position">University of California Davis, California, USA &nbsp;</span>
+							<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
+							</div>
+	    				</div>
 					    <div class="resume-wrap d-flex ftco-animate">
 					    	<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
@@ -166,35 +176,34 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2017</span>
-		    					<h2>Completed Sr. Sec. Education In Non-Medical Stream</h2>
-		    					<span class="position">Hans Raj Model School, Punjabi Bagh,New Delhi</span>
+		    					<span class="date">2023</span>
+		    					<h2>Azure Certified -> AZ-900, AI-900, DP-900 & SC-900</h2>
+		    					<span class="position">Microsoft Learn</span>
 		    					<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
 		    				</div>
 	    				</div>
+						<div class="resume-wrap d-flex ftco-animate">
+							<div class="icon d-flex align-items-center justify-content-center">
+								<span class="flaticon-ideas"></span>
+							</div>
+							<div class="text pl-3">
+								<span class="date">July 2022</span>
+								<h2>Clean Code and Clean Design Best Practices</h2>
+								<span class="position">University of Michigan, platform Coursera</span>
+								<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
+							</div>
+						</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
 	    					<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">April-June 2020</span>
-		    					<h2>Java DS & Algorithm Course</h2>
-		    					<span class="position">Coding Blocks ,India &nbsp;</span>
+		    					<h2>Data Structures & Algorithms inn Java Course</h2>
+		    					<span class="position">Coding Blocks, India &nbsp;</span>
 								<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
 								
 		    				</div>
-	    				</div>
-	    				<div class="resume-wrap d-flex ftco-animate">
-	    					<div class="icon d-flex align-items-center justify-content-center">
-					    		<span class="flaticon-ideas"></span>
-					    	</div>
-					    	<div class="text pl-3">
-		    					<span class="date">April 2020</span>
-		    					<h2>Introduction to SQL</h2>
-		    					<span class="position">University of Michigan, platform Coursera</span>
-		    					<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
-		    				</div>
-	    				</div>
 					  </div>
 
 					  <div id="page-2" class= "page two">
@@ -205,8 +214,8 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">August 2021-Till Now</span>
-		    					<h2>Junior Software Engineer</h2>
+		    					<span class="date">August 2021-Sept 2023</span>
+		    					<h2>Software Engineer - L1</h2>
 		    					<span class="position">EPAM Systems</span>
 		    					<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
 		    				</div>
@@ -230,39 +239,6 @@
 		    					<span class="date">February-May 2020</span>
 		    					<h2>Java Developer</h2>
 		    					<span class="position">Axovel Software  Pvt. Ltd., New Delhi, India</span>
-		    					<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
-		    				</div>
-	    				</div>
-	    				<div class="resume-wrap d-flex ftco-animate">
-	    					<div class="icon d-flex align-items-center justify-content-center">
-					    		<span class="flaticon-ideas"></span>
-					    	</div>
-					    	<div class="text pl-3">
-		    					<span class="date">June-July 2020</span>
-		    					<h2>Mentor</h2>
-		    					<span class="position">Hustler Community on Skillenza</span>
-		    					<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
-		    				</div>
-	    				</div>
-	    				<div class="resume-wrap d-flex ftco-animate">
-	    					<div class="icon d-flex align-items-center justify-content-center">
-					    		<span class="flaticon-ideas"></span>
-					    	</div>
-					    	<div class="text pl-3">
-		    					<span class="date">November 2019 - November 2020</span>
-		    					<h2>Campus Ambassador </h2>
-		    					<span class="position">Coding Blocks</span>
-		    					<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
-		    				</div>
-	    				</div>
-	    				<div class="resume-wrap d-flex ftco-animate">
-	    					<div class="icon d-flex align-items-center justify-content-center">
-					    		<span class="flaticon-ideas"></span>
-					    	</div>
-					    	<div class="text pl-3">
-		    					<span class="date">May 2020</span>
-		    					<h2>Campus Expert</h2>
-		    					<span class="position">Prepbytes</span>
 		    					<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
 		    				</div>
 	    				</div>
@@ -484,7 +460,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2015</span>
-		    					<h2>4 Years Continous Full Attendence In School</h2>
+		    					<h2>5 Years Continous Full Attendence In School</h2>
 		    					<span class="position">Hans Raj Model School</span>
 		    					<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
 		    				</div>
@@ -591,7 +567,7 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/ccf.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Credi Card Fraud Detection</a></h3>
+	    					<h3><a href="#">Credit Card Fraud Detection</a></h3>
 	    					<span>Machine Learning</span>
 	    				</div>
     				</div>
@@ -638,7 +614,7 @@
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3><a href="#">COVID-19 Prediction using Genome Sequence</a></h3>
-	    					<span>Machine Learning</span>
+	    					<span>Python and Machine Learning</span>
 	    				</div>
     				</div>
     			</div>
@@ -660,7 +636,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18 shadow">
               <div class="text">
-                <strong class="number" data-number="5">0</strong>
+                <strong class="number" data-number="9">0</strong>
                 <span>Complete Projects</span>
               </div>
             </div>
@@ -757,8 +733,8 @@
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
-						<h2>Upcoming <span> Graduate Student </span> in the field of Computer Science</h2>
-						<p>To continue my primary passion in the world of Computer Science I am going to pursue my Masters degree starting from the term Fall 2023 at your prestigious college</p>
+						<h2>Current <span> Graduate Student </span> in the field of Computer Science</h2>
+						<p>To continue my primary passion in the world of Computer Science I decided to back to school and pursue my Masters degree at University of California Davis so that I can become a better Software Engineer</p>
 						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Choose Me</a></p>
 					</div>
 				</div>
@@ -771,7 +747,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Contact</h1>
             <h2 class="mb-4">Contact Me</h2>
-            <p>If you need any other details from me ,you can contact me from the given contact information</p>
+            <p>If you need any other details from me, you can contact me from the given contact information</p>
           </div>
         </div>
 
@@ -783,7 +759,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Address</h3>
-		            <p>Paschim Puri, West Delhi, New Delhi, India - 110063</p>
+		            <p>West Village, Davis, Califronia, 95616, USA</p>
 		          </div>
 	          </div>
           </div>
@@ -794,7 +770,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Contact Number</h3>
-		            <p><a href="tel://1234567920">+91 7011806234</a></p>
+		            <p><a href="tel://1234567920">+1 5307606450</a></p>
 	            </div>
 	          </div>
           </div>
@@ -805,7 +781,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Email Address</h3>
-		            <p><a href="anubhavmishram@gmail.com">anubhavmishram@gmail.com</a></p>
+		            <p><a href="imishra@ucdavis.edu">imishra@ucdavis.edu</a></p>
 		          </div>
 	          </div>
           </div>
@@ -858,7 +834,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
-              <p>I am a Working Professional with more than 15 months of experience, with a Bachelors of Technology degree with 84%, make the right choice by choosing me for your program</p>
+              <p>I am a Working Professional with more than 2 years of industry experience, pursuing a Masters Degree in Computer Science and with a Bachelors of Technology degree in Information Technology, make the right choice by choosing me for your company</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="https://twitter.com/Anubhav_Mishra_"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.linkedin.com/in/anubhav-mishra-172726181/"><span class="icon-linkedin"></span></a></li>
@@ -896,9 +872,9 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3" style="width:max-content">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">Paschim Puri, West Delhi ,Delhi - 110063, India</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 7011806234</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">   anubhavmishram@gmail.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">West Village, Davis, California, 95616, USA</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+1 5307606450</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">   imishra@ucdavis.edu</span></a></li>
 	              </ul>
 	            </div>
             </div>
